[gd_scene load_steps=18 format=3 uid="uid://cedc7c312rh8f"]

[ext_resource type="Script" path="res://Evidence.gd" id="1_ga1vr"]
[ext_resource type="Texture2D" uid="uid://pnkcckfosod5" path="res://assets/ui/courtRecord.png" id="2_8h8mu"]
[ext_resource type="PackedScene" uid="uid://164o6bux1dgm" path="res://scenes/inv_ui_slot.tscn" id="3_0dppu"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="4_2dqwq"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="5_iwbre"]
[ext_resource type="Texture2D" uid="uid://cphiqj8mj3wud" path="res://assets/ui/presentButton.png" id="6_unlxh"]
[ext_resource type="PackedScene" path="res://scenes/takeThatTransition.tscn" id="7_b17n5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbafu"]
texture = ExtResource("5_iwbre")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4pf7t"]
texture = ExtResource("5_iwbre")
modulate_color = Color(0.861802, 0.621736, 0.602925, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ofoce"]
texture = ExtResource("5_iwbre")
modulate_color = Color(0.56, 0.3752, 0.3752, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltdpa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q40x5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jh6ii"]
texture = ExtResource("6_unlxh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bj4yw"]
texture = ExtResource("6_unlxh")
modulate_color = Color(0.862745, 0.623529, 0.603922, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kqqix"]
texture = ExtResource("6_unlxh")
modulate_color = Color(0.560784, 0.376471, 0.376471, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wdirw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vu2il"]

[node name="Evidence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ga1vr")

[node name="Background" type="ColorRect" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(48.6537, 27.8829)
color = Color(0, 0, 0, 0.52549)

[node name="NinePatchRect" type="NinePatchRect" parent="Background"]
layout_mode = 0
offset_left = -1.6609
offset_top = 4.87287
offset_right = 38.3391
offset_bottom = 44.8729
scale = Vector2(1.14336, 0.602391)
texture = ExtResource("2_8h8mu")

[node name="GridContainer" type="GridContainer" parent="Background/NinePatchRect"]
layout_mode = 0
offset_left = 7.51437
offset_top = 25.6771
offset_right = 303.514
offset_bottom = 58.6771
scale = Vector2(0.0722481, 0.265608)
theme_override_constants/h_separation = 37
columns = 9

[node name="inv_UI_slot" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot2" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot3" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot4" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot5" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot6" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot7" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot8" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="inv_UI_slot9" parent="Background/NinePatchRect/GridContainer" instance=ExtResource("3_0dppu")]
layout_mode = 2

[node name="ButtonContainer" type="GridContainer" parent="Background/NinePatchRect"]
modulate = Color(0.712129, 0.712129, 0.712129, 0.184314)
layout_mode = 0
offset_left = 7.67572
offset_top = 26.2287
offset_right = 103.676
offset_bottom = 34.2287
scale = Vector2(0.243043, 0.89589)
theme_override_constants/h_separation = 3
columns = 9

[node name="slot1" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot2" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot3" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot4" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot5" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot6" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot7" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot8" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="slot9" type="Button" parent="Background/NinePatchRect/ButtonContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Background"]
layout_mode = 0
offset_left = 32.3158
offset_top = 29.0895
offset_right = 137.316
offset_bottom = 60.0895
scale = Vector2(0.0732037, 0.0995292)
theme_override_fonts/font = ExtResource("4_2dqwq")
theme_override_styles/normal = SubResource("StyleBoxTexture_dbafu")
theme_override_styles/hover = SubResource("StyleBoxTexture_4pf7t")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ofoce")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ltdpa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q40x5")

[node name="Label" type="Label" parent="Background/Button"]
layout_mode = 0
offset_left = 39.2151
offset_top = 4.82174
offset_right = 79.2151
offset_bottom = 27.8217
scale = Vector2(0.833765, 1)
theme_override_fonts/font = ExtResource("4_2dqwq")
text = "Back"

[node name="Item_MainDisplay" type="Sprite2D" parent="Background"]
position = Vector2(7.64834, 13.1051)
scale = Vector2(0.0343467, 0.0640837)

[node name="Item_Name" type="Label" parent="Background"]
layout_mode = 0
offset_left = 10.601
offset_top = 8.19528
offset_right = 98.6011
offset_bottom = 31.1953
scale = Vector2(0.061575, 0.0957454)
theme_override_fonts/font = ExtResource("4_2dqwq")
text = "Item Name"

[node name="Item_Description" type="Label" parent="Background"]
layout_mode = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 523.0
offset_bottom = 107.0
scale = Vector2(0.0491296, 0.0855063)
theme_override_fonts/font = ExtResource("4_2dqwq")
text = "Item Description"
autowrap_mode = 3

[node name="PresentButton" type="Button" parent="."]
layout_mode = 0
offset_left = 645.0
offset_top = -6.0
offset_right = 655.0
offset_bottom = 4.0
scale = Vector2(65.2006, 16.3116)
theme_override_styles/normal = SubResource("StyleBoxTexture_jh6ii")
theme_override_styles/hover = SubResource("StyleBoxTexture_bj4yw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kqqix")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wdirw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vu2il")

[node name="PresentButtonLabel" type="Label" parent="PresentButton"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 86.0
offset_bottom = 24.0
scale = Vector2(0.0504542, 0.191341)
theme_override_fonts/font = ExtResource("4_2dqwq")
text = "Present"
horizontal_alignment = 1

[node name="takeThat" parent="." instance=ExtResource("7_b17n5")]
